--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-confetti": "^6.x.x"
+    "react-confetti": "^6.x.x",
+      "clsx": "^2.x.x"
+
 
   },
   "devDependencies": {
